--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -402,7 +402,7 @@ footer {
 }
 
 .form-contato button.btn:hover {
-  background-color: #333;
+  background-color: #f10707;
 }
 @keyframes pop {
   0% {
